examples/test/testpolicy5687.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5687
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key11: value0
      key28: value0
      key5: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value37
          key19: value47
      podSelector:
        matchLabels:
          key23: value13
          key47: value8
          key1: value39
